<resources>
    <string name="app_name">AN2Linux</string>
    <string name="packagename">kiwi.root.an2linuxclient</string>
    <string name="activity_label_enabled_applications">Enabled applications</string>
    <string name="activity_label_notification_settings">Notification settings</string>
    <string name="activity_label_custom_notification_settings">Custom settings</string>
    <string name="activity_label_server_configuration">Server configuration</string>
    <string name="activity_label_client_certificate">Device certificate and key</string>
    <string name="main_setup_category_title">Setup</string>
    <string name="main_settings_category_title">Settings</string>
    <string name="main_settings_category_about">About</string>
    <string name="main_enable_an2linux">Enable AN2Linux</string>
    <string name="main_enable_service">Enable foreground service</string>
    <string name="main_enable_service_summary">
        Android 8.0 added \'Background Execution Limits\' to help with battery drain caused by apps
        running in background. Which means that AN2Linux might be killed by the system. So if you
        run Android 8.0+ and have problems with AN2Linux missing notifications, then you could try
        to run AN2Linux as a foreground service.</string>
    <string name="main_enable_service_notification_channel_name">AN2Linux foreground service</string>
    <string name="main_enable_service_information_notification_channel_name">AN2Linux information channel</string>
    <string name="main_enable_service_information_notification_title">How to hide AN2Linux Notification</string>
    <string name="main_enable_service_information_notification_text">To hide the notification dot of the service
        notification, open the notification settings of this app, click on the service channel name and set the
        importance to low.
    </string>
    <string name="main_ignore_battery_optimization_title">Ignore battery optimizations (Doze)</string>
    <string name="main_ignore_battery_optimization_summary">
        Android 6.0 added \'Doze\' to limit apps running in background, it can for example block network access.
        Disabling \'Doze\' for AN2Linux may be necessary for it to work properly (unless using a foreground service, foreground services don\'t get dozed).
        It may be worth to try this before going full foreground service mode.
        Click here to do that.</string>
    <string name="main_ignore_battery_optimization_summary_already_ignored">AN2Linux is ignored by Doze</string>
    <string name="main_enabled_apps_summary">Send notifications from these apps only</string>
    <string name="main_server_configuration_summary">Add a server to send notifications to</string>
    <string name="main_display_test_notification">Display test notification</string>
    <string name="main_include_title">Include notification title</string>
    <string name="main_include_message">Include notification message</string>
    <string name="main_include_icon">Include notification icon</string>
    <string name="main_icon_size">Icon size</string>
    <string name="main_icon_size_summary">%d pixels\nMost notification daemons will scale the image to a specific size, just so you know</string>
    <string name="main_icon_size_dialog_message">Select icon size:</string>
    <string name="main_force_title">Force notification title to be app name</string>
    <string name="main_max_title">Maximum chars to include from title</string>
    <string name="main_max_title_dialog_message">Select max title size:</string>
    <string name="main_max_message">Maximum chars to include from message</string>
    <string name="main_max_message_dialog_message">Select max message size:</string>
    <string name="main_dont_send_if_screen_on">Don\'t send if phone screen is on</string>
    <string name="main_dont_send_if_screen_on_summary">Don\'t send notifications if phone screen is on</string>
    <string name="main_block_ongoing">Block ongoing event notifications</string>
    <string name="main_block_ongoing_summary">For example an incoming or active phone call</string>
    <string name="main_block_foreground">Block running service notifications</string>
    <string name="main_block_group">Block group summary notifications</string>
    <string name="main_block_group_summary">This is different for every app, you have to tinker with this setting\nWith gmail it\'s notifications of type:\n\"2 new messages\"\nApparently text messages from Viber is flagged as this</string>
    <string name="main_block_local">Block local notifications</string>
    <string name="main_block_local_summary">You need to tinker with this as well\nIt\'s probably best not to block but this is what android reference says:\n\"notification is relevant to the current device only and it is not recommended that it bridge to other devices\"\nFor example Google Now Reminders is flagged as this</string>
    <string name="main_license">License</string>
    <string name="main_license_summary">GNU General Public License 3</string>
    <string name="main_source_code_client">Source code this app</string>
    <string name="main_source_code_client_link">https://github.com/rootkiwi/an2linuxclient</string>
    <string name="main_source_code_server">Source code server</string>
    <string name="main_source_code_server_link">https://github.com/rootkiwi/an2linuxserver</string>
    <string name="main_dialog_ask_notification_access">AN2Linux requires access to your notifications. When the notification settings will open, enable AN2Linux then hit the back button.</string>
    <string name="main_dialog_ask_coarse_location_access">AN2Linux requires location permission to obtain the WiFi SSID. When the permission settings will open, grant the location permission.</string>
    <string name="main_dialog_ask_fine_location_access">Since Android 10+ AN2Linux requires fine instead of coarse location permission to obtain the WiFi SSID. It need it \'all the time\' to be able to use SSID whitelist. When the permission settings will open, grant the location permission.</string>
    <string name="main_dialog_ask_background_location_access">AN2Linux requires location permission \'all the time\' to access WiFi SSID when running in background. When the permission settings will open, grant the location permission.</string>
    <string name="enabled_apps_enable_disable_all">Enable/disable all</string>
    <string name="empty_view_text_server_configuration">There are three different kind of "servers": WiFi, Mobile and Bluetooth.\n\nWhat that means is simply that AN2Linux will only try to send notifications to a server if you are connected to that type.\n\nFor example if you are connected to WiFi it will only try to send to all enabled WiFi servers and not to any mobile servers.\n\nBluetooth is kinda special, here "connected" means that bluetooth is turned on.</string>
    <string name="connection_type_wifi">WiFi</string>
    <string name="connection_type_mobile">Mobile</string>
    <string name="connection_type_bluetooth">Bluetooth</string>
    <string name="button_save_text">Save</string>
    <string name="button_delete_text">Delete</string>
    <string name="dialog_title_address">Address</string>
    <string name="dialog_title_port">Port</string>
    <string name="dialog_title_ssid">SSID whitelist</string>
    <string name="dialog_title_pairing">Pairing</string>
    <string name="dialog_title_roaming">Roaming</string>
    <string name="dialog_title_bt_name">Display name</string>
    <string name="dialog_title_bt_mac">MAC address</string>
    <string name="dialog_ip_or_hostname_hint">Enter ip or hostname</string>
    <string name="dialog_port_hint">Enter port number</string>
    <string name="dialog_title_ssid_hint">Enter one or more SSID comma-separated\nExample: WiFi1, wifi2, ssid\\,with\\,comma\nCase-sensitive, escape comma with \'\\\'\nLeave empty to allow any</string>
    <string name="dialog_pairing_info_text">Need to exchange certificates</string>
    <string name="spinner_choose_certificate">Choose existing certificate…</string>
    <string name="dialog_pairing_button_text">Initiate pairing with server</string>
    <string name="dialog_pairing_button_text_or">Or initiate pairing with server</string>
    <string name="dialog_allow_roaming">Allow when roaming</string>
    <string name="dialog_bt_title_name_hint">This is just the name to be shown in the server list in this app</string>
    <string name="bluetooth_no_paired_found">No paired bluetooth computers found</string>
    <string name="bluetooth_not_supported">Bluetooth not supported on your device</string>
    <string name="bluetooth_new_edit">Edit</string>
    <string name="invalid_address">Invalid address</string>
    <string name="port_range">Port range is 0–65535</string>
    <string name="invalid_port">Invalid port number</string>
    <string name="pairing_connecting">Connecting…</string>
    <string name="try_again">Try again</string>
    <string name="need_to_pair_first">You need to pair first</string>
    <string name="certificate_already_in_database">Certificate was already in database, just so you know</string>
    <string name="bluetooth_is_off">Bluetooth is turned off</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="verify_hash">Verify hash:\n\n</string>
    <string name="server_accepted_pairing">Server accepted pairing\n</string>
    <string name="server_denied_pairing">Server denied pairing</string>
    <string name="connection_closed">Connection closed</string>
    <string name="not_connected">Not connected</string>
    <string name="you_are_roaming">You are roaming</string>
    <string name="unknown_host">Unknown host</string>
    <string name="disallowed_ssid">Disallowed SSID</string>
    <string name="not_connected_to_wifi">Not connected to WiFi</string>
    <string name="connected_timed_out">Connection timed out</string>
    <string name="waiting_for_server_to_accept">Waiting for server to accept…\n%s</string>
    <string name="server_list_port_colon">Port:</string>
    <string name="server_list_ssid_whitelist_colon">SSID whitelist:</string>
    <string name="server_list_any_ssid">Any</string>
    <string name="server_list_roaming_allowed">Roaming allowed:</string>
    <string name="server_list_roaming_allowed_yes">yes</string>
    <string name="server_list_roaming_allowed_no">no</string>
    <string name="server_list_certificate_fingerprint">Fingerprint (SHA256):</string>
    <string name="test_notif_need_access">Need access to notifications</string>
    <string name="test_notif_an2linux_not_enabled">AN2Linux not globally enabled</string>
    <string name="test_notif_an2linux_not_enabled_in_applications">AN2Linux not enabled in enabled applications</string>
    <string name="test_notif_found_no_enabled">Found no enabled %s server</string>
    <string name="test_notif_testing">Testing %s…</string>
    <string name="test_notif_title">title</string>
    <string name="test_notif_message">message</string>
    <string name="test_notif_message_line_two">message line 2</string>
    <string name="client_certificate_info">AN2Linux generated on first run a 4096 bit RSA key and certificate.\n\nThis is only used for authentication to the server (your computer) and not for encryption.\n\nAfter you have successfully paired with a server you should be able to see your fingerprint in the authorized_certs file at the beginning of a line.\n\nauthorized_certs file is located in:\n$XDG_CONFIG_HOME/an2linux/\nwhich per default is:\n$HOME/.config/an2linux/</string>
    <string name="client_certificate_fingerprint">Certificate fingerprint (SHA256):</string>
    <string name="client_certificate_button_text">Generate new key and certificate</string>
    <string name="generate_key_notification_channel_name">AN2Linux key generation</string>
    <string name="generate_key_working">Working hard…</string>
    <string name="main_changelog">Changelog</string>
</resources>