<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/main_setup_category_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_enable_an2linux"
            android:title="@string/main_enable_an2linux"
            android:widgetLayout="@layout/appcompat_switch_layout" />

        <Preference
            android:summary="@string/main_enabled_apps_summary"
            android:title="@string/activity_label_enabled_applications">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.EnabledApplicationsActivity"
                android:targetPackage="kiwi.root.an2linuxclient" />
        </Preference>

        <Preference
            android:summary="@string/main_server_configuration_summary"
            android:title="@string/activity_label_server_configuration">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.ServerConfigurationActivity"
                android:targetPackage="kiwi.root.an2linuxclient" />
        </Preference>

        <Preference
            android:key="display_test_notification"
            android:title="@string/main_display_test_notification" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="main_settings"
        android:title="@string/main_settings_category_title">

        <Preference android:title="@string/activity_label_client_certificate">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.ClientCertificateActivity"
                android:targetPackage="kiwi.root.an2linuxclient" />
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_include_notification_title"
            android:title="@string/main_include_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="preference_include_notification_title"
            android:key="preference_force_title"
            android:title="@string/main_force_title" />

        <kiwi.root.an2linuxclient.data.NumberPickerPreference
            android:defaultValue="20"
            android:dependency="preference_include_notification_title"
            android:dialogMessage="@string/main_max_title_dialog_message"
            android:key="preference_title_max_size"
            android:title="@string/main_max_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_include_notification_message"
            android:title="@string/main_include_message" />

        <kiwi.root.an2linuxclient.data.NumberPickerPreference
            android:defaultValue="120"
            android:dependency="preference_include_notification_message"
            android:dialogMessage="@string/main_max_message_dialog_message"
            android:key="preference_message_max_size"
            android:title="@string/main_max_message" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_include_notification_icon"
            android:title="@string/main_include_icon" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_block_ongoing"
            android:summary="@string/main_block_ongoing_summary"
            android:title="@string/main_block_ongoing" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_block_foreground"
            android:title="@string/main_block_foreground" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/main_settings_category_about">

        <Preference
            android:key="license"
            android:summary="@string/main_license_summary"
            android:title="@string/main_license" />

        <Preference
            android:summary="@string/main_source_code_client_link"
            android:title="@string/main_source_code_client">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/main_source_code_client_link" />
        </Preference>

        <Preference
            android:summary="@string/main_source_code_server_link"
            android:title="@string/main_source_code_server">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/main_source_code_server_link" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>