<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/main_setup_category_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_enable_an2linux"
            android:title="@string/main_enable_an2linux"
            android:widgetLayout="@layout/appcompat_switch_layout" />

        <Preference
            android:summary="@string/main_enabled_apps_summary"
            android:title="@string/activity_label_enabled_applications">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.EnabledApplicationsActivity"
                android:targetPackage="@string/packagename" />
        </Preference>

        <Preference
            android:summary="@string/main_server_configuration_summary"
            android:title="@string/activity_label_server_configuration">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.ServerConfigurationActivity"
                android:targetPackage="@string/packagename" />
        </Preference>

        <Preference
            android:key="@string/main_display_test_notification_key"
            android:title="@string/main_display_test_notification" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/main_settings_category_title">

        <Preference android:title="@string/activity_label_client_certificate">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.ClientCertificateActivity"
                android:targetPackage="@string/packagename" />
        </Preference>

        <Preference
            android:title="@string/activity_label_notification_settings">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kiwi.root.an2linuxclient.activities.NotificationSettingsActivity"
                android:targetPackage="@string/packagename" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/main_settings_category_about">

        <Preference
            android:key="@string/main_changelog_key"
            android:title="@string/main_changelog" />

        <Preference
            android:key="@string/main_license_key"
            android:summary="@string/main_license_summary"
            android:title="@string/main_license" />

        <Preference
            android:summary="@string/main_source_code_client_link"
            android:title="@string/main_source_code_client">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/main_source_code_client_link" />
        </Preference>

        <Preference
            android:summary="@string/main_source_code_server_link"
            android:title="@string/main_source_code_server">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/main_source_code_server_link" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>