<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/InfoTextStyle"
            android:layout_gravity="center"
            android:text="@string/client_certificate_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="@string/client_certificate_fingerprint"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fingerprintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:paddingTop="20dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/generateNewButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="monospace"
            android:text="@string/client_certificate_button_text"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>